# reputation_tracker

./: .dockerignore  .gitignore  .gitlab-ci.yml  .sqlfluff  CLAUDE.md  Dockerfile  Dockerfile.rewriter  README.md  docker-bake.hcl  openapi_rewrite.sh  postgrest.conf  rewrite_rules.conf
account_dump/: account_rep_stats.sql  compare_accounts.sql  data_insertion_script.py
backend/operation_parsers/: vote_operations.sql
backend/utilities/: account.sql  exceptions.sql  operation_types.sql  reputation_constants.sql  validators.sql
db/: backend.sql  builtin_roles.sql  calculate_account_reputations.sql  create_indexes.sql  database_schema.sql  main_loop.sql  process_block_range.sql  rep_helpers.sql  rep_indexes.sql  rep_views.sql  reptracker_app.sql  reputation_tracker_app.sql  schema.sql
db/utilities/: account.sql  exceptions.sql
docker/: .env  README.md  docker-compose-test.yml  docker-compose.yml  reputation_tracker_nginx.conf  reputation_tracker_nginx.conf.template
docker/ci/: Dockerfile  docker-compose.full.yml
docker/overrides/: dev.yml
docker/scripts/: block-processing-healthcheck.sh  docker-entrypoint.sh  (+1 more)
endpoints/: endpoint_schema.sql  get_rep_last_synced_block.sql  get_rep_version.sql  get_reputation.sql  rewrite_rules.conf
scripts/: build_docker_image.sh  clean_db.sh  generate_version_sql.sh  install_app.sh  openapi_rewrite.sh  process_blocks.sh  setup_db.sh  start_sync.sh  uninstall_app.sh
scripts/python_api_package/: generate_reputation_api_client.py  generate_reputation_api_client.sh  pyproject.toml
scripts/python_api_package/hiveio_reputation_api/: .gitignore
scripts/python_api_package/tests/: api_caller.py  api_collection.py  test_generated_api_client.py  test_package_import.py
tests/: account_dump_test.sh  account_dump_test_83m.sh  accounts_dump.json
(+34 files in other folders)
