[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "reputation_api"
version = "0.0.0"
description = ""
authors = []

packages = [
    { include = "reputation_api" },
]
include = [
    { path =  "reputation_api/*", format = ["wheel", "sdist"] },
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-hive", url = "https://gitlab.syncad.com/api/v4/groups/136/-/packages/pypi/simple", priority = "supplemental" },
]

[tool.poetry.dependencies]
python = ">=3.14,<4"
# Use Python 3.14 branch version that uses msgspec instead of pydantic
api_client_generator = "1.7.1.dev4+6fe5c3e.dirty"
# Pin pydantic to v1 (pure Python) to avoid pydantic-core build failures on Python 3.14
pydantic = "1.10.25"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
hiveio-beekeepy = "1.28.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "reputation_api/__init__.py",
]